cilium/cilium-network-policy/network-policy-demo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1
  namespace: dev
  labels:
    app: app1-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
        - name: app1
          image: nicolaka/netshoot
          command: ["sleep", "999999"]
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2
  namespace: dev
  labels:
    app: app2-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app2
  template:
    metadata:
      labels:
        app: app2
    spec:
      containers:
        - name: app2
          image: nicolaka/netshoot
          command: ["sleep", "999999"]
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app3
  namespace: dev
  labels:
    app: app3-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app3
  template:
    metadata:
      labels:
        app: app3
    spec:
      containers:
        - name: app3
          image: nicolaka/netshoot
          command: ["sleep", "999999"]
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app4
  namespace: dev
  labels:
    app: app4-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app4
  template:
    metadata:
      labels:
        app: app4
    spec:
      containers:
        - name: app4
          image: nginx
---
apiVersion: v1
kind: Service
metadata:
  name: app4-dev
  namespace: dev
spec:
  type: NodePort
  selector:
    app: app4
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30007
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1
  namespace: staging
  labels:
    app: app1-staging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
        - name: app1
          image: nicolaka/netshoot
          command: ["sleep", "999999"]
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2
  namespace: staging
  labels:
    app: app2-staging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app2
  template:
    metadata:
      labels:
        app: app2
    spec:
      containers:
        - name: app2
          image: nicolaka/netshoot
          command: ["sleep", "999999"]
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app3
  namespace: staging
  labels:
    app: app3-staging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app3
  template:
    metadata:
      labels:
        app: app3
    spec:
      containers:
        - name: app3
          image: nicolaka/netshoot
          command: ["sleep", "999999"]
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1
  namespace: prod
  labels:
    app: app1-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
        - name: app1
          image: nicolaka/netshoot
          command: ["sleep", "999999"]
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2
  namespace: prod
  labels:
    app: app2-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app2
  template:
    metadata:
      labels:
        app: app2
    spec:
      containers:
        - name: app2
          image: nicolaka/netshoot
          command: ["sleep", "999999"]
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app3
  namespace: prod
  labels:
    app: app3-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app3
  template:
    metadata:
      labels:
        app: app3
    spec:
      containers:
        - name: app3
          image: nicolaka/netshoot
          command: ["sleep", "999999"]
