cilium/cilium-network-policy/l3-np-2.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "l3-np-2"
  namespace: dev
spec:
  # allow to connect to app1 pod in dev namespace only from app2 pod from prod namespace
  endpointSelector:
    matchLabels:
      app: app1
  ingress:
    - fromEndpoints:
        - matchLabels:
            # get this value from kubectl describe cep <app2-endpoint-prod> -n prod
            k8s:io.kubernetes.pod.namespace: prod
            app: app2
