cilium/cilium-network-policy/l3-np-3.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "l3-np-3"
  namespace: dev
spec:
  # allow to connect to app1 pod in dev namespace only from app2 pod from prod or staging namespace
  endpointSelector:
    matchLabels:
      app: app1
  ingress:
    - fromEndpoints:
        - matchLabels:
            app: app2
          matchExpressions:
            - key: "k8s:io.kubernetes.pod.namespace"
              operator: In
              values:
                - staging
                - prod
