cilium/cilium-network-policy/l4-np-2.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "l4-np-2"
  namespace: dev
spec:
  # allow to connect from app1 pod to any pod in any namespace on port from 80 to 83
  endpointSelector:
    matchLabels:
      app: app1
  egress:
    - toPorts:
        - ports:
            - port: "80"
              protocol: TCP
